--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()" #form="ngForm">  
+<!-- <form (ngSubmit)="onSubmit()" #form="ngForm">  
   <div class="form-group">
 
     <label> Name</label>
@@ -50,29 +50,11 @@
   </div>
 </form>
 
+ -->
 
 
-<!-- const form ={
 
-  values:{
-  
-    name:'Jonathan',
-    contactInfo:{
-    email:'jonathan@gmail.com',
-    phone:0712584549,
-    },
-    course:'Javascript',
-    Bio:'Bio goes her...',
-    gender:'Male'
-  }
+  <!-- <app-fs></app-fs> -->
 
-  valid:true,
-  touched
-  status
-  controls{
-  name:{
-valid:true
-value
-    }
-  }
-  } -->
+
+  <app-rform></app-rform>
