worked on form Builder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,4 +57,7 @@
   <!-- <app-fs></app-fs> -->
 
 
-  <app-rform></app-rform>
+  <!-- <app-rform></app-rform> -->
+  <!-- <app-builder></app-builder> -->
+
+  <app-form-builder></app-form-builder>
